<resources>
    <string name="app_name">RemoteSPi</string>
    <string name="c2_button_text"><![CDATA[configure C&C server]]></string>
    <string name="config_net_text">configure network</string>
    <string name="exe_cmd_text">Execute command</string>
    <string name="raspberry_spi_text">Raspberry SPi</string>
    <string name="wireless_network_text">Wireless Network name:</string>
    <string name="password_label">Password (if requred):</string>
    <string name="connect_button">Connect</string>
    <string name="cmd_control_configure">Configure</string>
    <string name="no_bluetooth_available">This device does not support Bluetooth, terminating process.</string>
    <string name="connect_bluetooth_device">Please connect to a bluetooth device first</string>
    <string name="ic_refresh">&#xf021;</string>
    <string name="airdump_cmd">Start airodump</string>
    <string name="stop_airdump_cmd">Stop Airodump</string>
</resources>
