<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/background_material_dark"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/targetLayout"
        android:layout_gravity="center"
        android:layout_alignParentBottom="true">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/refreshButton"
            android:textSize="20sp"
            android:layout_gravity="center_vertical"
            android:textColor="#ffffff"
            android:text="Target device: "/>
        <Spinner
            android:layout_width="190dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:entries="@array/paired_devices"
            android:background="#afafaf"
            android:minHeight="30dp" />
        <com.github.johnkil.print.PrintView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="10dp"
            app:iconSize="30dp"
            app:iconColor="#00ff00"
            app:iconFont="fonts/fontawesome-webfont.ttf"
            app:iconText="@string/ic_refresh" />
    </LinearLayout>
    <RelativeLayout
        android:layout_width="fill_parent"
        android:id="@+id/buttonLayout"
        android:orientation="vertical"
        android:layout_above="@id/targetLayout"
        android:gravity="center"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_centerInParent="true"
            android:orientation="vertical"
            android:id="@+id/innerButtonLayout"
            android:minWidth="200dp"
            android:layout_height="wrap_content">
            <Button
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:onClick="executeCommandActivity"
                android:text="@string/exe_cmd_text" />
            <Button
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:onClick="openNetworkConfigurationActivity"
                android:text="@string/config_net_text"/>
            <Button
                android:layout_width="fill_parent"
                android:gravity="center"
                android:layout_height="wrap_content"
                android:onClick="openC2ConfigServerActivity"
                android:text="@string/c2_button_text"/>
        </LinearLayout>
    </RelativeLayout>

    <ImageView
        android:layout_width="fill_parent"
        android:id="@+id/spiIcon"
        android:src="@drawable/spi"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_above="@id/buttonLayout"/>
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:gravity="center"
        android:textSize="30sp"
        android:layout_above="@id/spiIcon"
        android:id="@+id/appName"
        android:textColor="@android:color/background_light"
        android:text="@string/raspberry_spi_text"/>
</RelativeLayout>
